Add rezweet feature
Add ability to rezweet a post and fix some minor bugs
