# posts/api/handler.go
@@ -26,8 +26,8 @@ var UsersServiceNotFoundError = fmt.Errorf("Users service not configured in conf
 func postPb(ctx context.Context, post *data.Post, user *userspb.User) *postspb.Post {
 	userMd, _ := ctx.Value(auth.ClientIDKey).(*auth.UserMetaData)
 	childs := []*postspb.Post{}
+	svc, ok := ctx.Value(auth.ServiceKey).(*service.Service)
 	if len(post.Children) > 0 {
-		svc, ok := ctx.Value(auth.ServiceKey).(*service.Service)
 		if !ok {
 			return nil
 		}
@@ -40,6 +40,27 @@ func postPb(ctx context.Context, post *data.Post, user *userspb.User) *postspb.P
 			childs = append(childs, postPb(ctx, &child, resp.User))
 		}
 	}
+
+	rezweetPb := &postspb.Post{}
+
+	if post.RezweetId != 0 {
+		rezweetPost := data.PostStore.GetByID(post.RezweetId)
+		resp, err := svc.UsersServiceClient.GetUserByID(context.Background(), &userspb.GetUserByIDRequest{Id: rezweetPost.Author})
+		if err != nil {
+			return nil
+		}
+		rezweetUser := resp.User
+		rezweetPb = &postspb.Post{
+			Id:       rezweetPost.ID,
+			Text:     rezweetPost.Title,
+			Created:  rezweetPost.Created,
+			Author:   &postspb.User{Id: rezweetUser.Id, Username: rezweetUser.Username},
+			Parentid: rezweetPost.ParentId,
+			Likes:    data.LikeStore.GetLikesCount(rezweetPost.ID),
+			Media:    rezweetPost.Media,
+		}
+	}
+
 	resp := &postspb.Post{
 		Id:       post.ID,
 		Text:     post.Title,
@@ -49,6 +70,7 @@ func postPb(ctx context.Context, post *data.Post, user *userspb.User) *postspb.P
 		Children: childs,
 		Likes:    data.LikeStore.GetLikesCount(post.ID),
 		Media:    post.Media,
+		Rezweet:  rezweetPb,
 	}
 
 	if userMd != nil {
@@ -212,4 +234,36 @@ func (s *Server) LikePost(ctx context.Context, in *postspb.LikeRequest) (*postsp
 	data.LikeStore.AddDbList(&data.Like{Post: in.Post, Author: user.Id})
 
 	return &postspb.EmptyData{}, nil
+}
+
+func (s *Server) Rezweet(ctx context.Context, in *postspb.RezweetRequest) (*postspb.CreatePostResponse, error) {
+	ts := time.Now().Unix()
+
+	user, ok := ctx.Value(auth.ClientIDKey).(*auth.UserMetaData)
+	if !ok {
+		s.Log.Errorf("Failed to create a new post: User not authenticated properly")
+		return nil, errors.New("Invalid userid")
+	}
+
+	svc, ok := ctx.Value(auth.ServiceKey).(*service.Service)
+	if !ok {
+		s.Log.Errorf("Failed to create a new post: Service not configured properly")
+		return nil, fmt.Errorf("Not configured properly")
+	}
+
+	resp, err := svc.UsersServiceClient.GetUserByID(context.Background(), &userspb.GetUserByIDRequest{Id: user.Id})
+	if err != nil {
+		s.Log.Errorf("Failed to connect to the users service: %v", err)
+		return nil, err
+	}
+
+	post := &data.Post{Title: in.GetText(), Created: int64(ts), RezweetId: in.GetRezweetId()}
+	post.Author = resp.User.Id
+
+	data.PostStore.AddDbList(post)
+	s.Log.Info("Created a new post")
+
+	return &postspb.CreatePostResponse{
+		Post: postPb(ctx, post, resp.User),
+	}, nil
 }
